Sample3/Minimo responsive beta-1

--- a/sample-3/style.scss
+++ b/sample-3/style.scss
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Playfair Display', serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.7;
     color: #626262;
@@ -15,6 +18,16 @@ button {
 }
 button:focus, input:focus {
     outline: none;
+}
+.bt-scroll-top {
+    position: fixed;
+    bottom: 8px;
+    right: 8px;
+    i {
+        color: gray;
+        padding: 12px 12px;
+        background-color: rgba($color: #000, $alpha: .05);
+    }
 }
 .wrapper {
     max-width: 1094px;
@@ -30,9 +43,17 @@ button:focus, input:focus {
     // border: 1px solid blue;
     overflow: hidden;
 }
+.top-nav {
+    padding-left: 16px;
+    padding-right: 16px;
+}
 header {
-    padding: 64px 16px 0;
-    margin-bottom: 32px;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    padding: 64px 0 0;
+    // margin-bottom: 32px;
+    transition: padding-top .5s;
     img {
         display: inline-block;
         max-width: 122px;
@@ -42,18 +63,24 @@ header {
         // border: 1px solid purple;
         float: right;
         ul li {
-            padding: 0px 0px 8px 90px;
+            padding: 0px 0px 8px 10vw;
             list-style: none;
             float: left;
         }
         a {
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 400;
             color: inherit;            
             text-decoration: none;
             text-transform: uppercase;
+            &:hover {
+                border-bottom: 2px solid;
+            }
         }
     }
+}
+.shrink {
+    padding-top: 12px;
 }
 .post {
     margin-bottom: 114px;
@@ -71,7 +98,7 @@ header {
     padding: 0 25px;
     h2 {
         font-family: 'Ubuntu', sans-serif;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 300;
         margin-top: 98px;
         text-transform: uppercase;
@@ -83,7 +110,7 @@ header {
         margin-bottom: 40px;
     }
     p {
-        font-size: 14px;
+        font-size: 16px;
     }
     p:last-child {
         font-family: 'Ubuntu', sans-serif;
@@ -104,7 +131,7 @@ header {
     }
     h2 {
         font-family: 'Ubuntu', sans-serif;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 300;
         margin-top: 30px;
         margin-bottom: 30px;
@@ -118,7 +145,7 @@ header {
         margin-bottom: 40px;
     }
     p {
-        font-size: 14px;
+        font-size: 16px;
         line-height: 1.7;
     }
 }
@@ -149,7 +176,7 @@ header {
         }
         input {
             font-family: 'Playfair Display', serif;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 400;
             padding: 6px;
             background-color: inherit;
@@ -236,17 +263,42 @@ footer {
     nav {
         display: none;
     }
+    .compact-menu-open {
+        float: right;
+        margin-top: -10px;
+        padding: 0 8px;
+        font-size: 24px;
+        color: darkgray;
+
+    }
     .nav-menu-compact {
+        position: fixed;
         display: block;
-        clear: both;
-        float: right;
-        // border: 1px solid pink;
-        float: right;
-        div {
-            width: 32px;
-            height: 3px;
-            background-color: #626262;
-            margin: 4px 0;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 0%;
+
+        z-index: 1000;
+        background-color: rgba($color: #000000, $alpha: .7);
+        
+        .compact-menu-close {
+            font-size: 24px;
+            color: white;
+            padding: 8px 16px;
+            display: block;
+        }
+        .compact-menu-items {
+            text-align: center;
+            a {
+                text-decoration: none;
+                color: white;
+                font-size: 18px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                padding: 16px;
+            }
         }
     }
 }
