--- a/sample-3/style.css
+++ b/sample-3/style.css
@@ -5,9 +5,13 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Playfair Display', serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.7;
   color: #626262;
@@ -19,6 +23,18 @@ button {
 
 button:focus, input:focus {
   outline: none;
+}
+
+.bt-scroll-top {
+  position: fixed;
+  bottom: 8px;
+  right: 8px;
+}
+
+.bt-scroll-top i {
+  color: gray;
+  padding: 12px 12px;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .wrapper {
@@ -35,9 +51,18 @@ button:focus, input:focus {
   overflow: hidden;
 }
 
+.top-nav {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 header {
-  padding: 64px 16px 0;
-  margin-bottom: 32px;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  padding: 64px 0 0;
+  -webkit-transition: padding-top .5s;
+  transition: padding-top .5s;
 }
 
 header img {
@@ -51,17 +76,25 @@ header nav {
 }
 
 header nav ul li {
-  padding: 0px 0px 8px 90px;
+  padding: 0px 0px 8px 10vw;
   list-style: none;
   float: left;
 }
 
 header nav a {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   color: inherit;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+header nav a:hover {
+  border-bottom: 2px solid;
+}
+
+.shrink {
+  padding-top: 12px;
 }
 
 .post {
@@ -84,7 +117,7 @@ header nav a {
 
 .post-content h2 {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   margin-top: 98px;
   text-transform: uppercase;
@@ -98,7 +131,7 @@ header nav a {
 }
 
 .post-content p {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .post-content p:last-child {
@@ -123,7 +156,7 @@ header nav a {
 
 .card h2 {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -140,7 +173,7 @@ header nav a {
 }
 
 .card p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.7;
 }
 
@@ -177,7 +210,7 @@ header nav a {
 
 .newsletter-wrapper form input {
   font-family: 'Playfair Display', serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   padding: 6px;
   background-color: inherit;
@@ -271,17 +304,40 @@ footer {
   nav {
     display: none;
   }
-  .nav-menu-compact {
-    display: block;
-    clear: both;
+  .compact-menu-open {
     float: right;
-    float: right;
+    margin-top: -10px;
+    padding: 0 8px;
+    font-size: 24px;
+    color: darkgray;
   }
-  .nav-menu-compact div {
-    width: 32px;
-    height: 3px;
-    background-color: #626262;
-    margin: 4px 0;
+  .nav-menu-compact {
+    position: fixed;
+    display: block;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 0%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  .nav-menu-compact .compact-menu-close {
+    font-size: 24px;
+    color: white;
+    padding: 8px 16px;
+    display: block;
+  }
+  .nav-menu-compact .compact-menu-items {
+    text-align: center;
+  }
+  .nav-menu-compact .compact-menu-items a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 16px;
   }
 }
 
