Sample3/minimo Beta-1 fix-3

--- a/sample-3/style.css
+++ b/sample-3/style.css
@@ -105,6 +105,10 @@ header nav a:hover {
   margin-bottom: 114px;
 }
 
+.featured {
+  padding-top: 108px;
+}
+
 .post-bg-image {
   background-image: url(./images/image-5.png);
   background-size: cover;
