--- a/sample-3/style.scss
+++ b/sample-3/style.scss
@@ -88,6 +88,9 @@ header {
 .post {
     margin-bottom: 114px;
 }
+.featured {
+    padding-top: 108px;
+}
 .post-bg-image {
     background-image: url(./images/image-5.png);
     background-size: cover;
